some pages are added

--- a/index.html
+++ b/index.html
@@ -3,13 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore The Unseen</title>
+    <title>Explore Unseen</title>
     <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-<!--Header Section-->
+<!--navbar Section-->
     <header>
+        <nav>
+            <div>
+            <img src="images/Group 40071 (2).png" alt="">
+            <h1>Explore<span class="red">Unseen</span></h1>
+            </div>
+            <ul>
+                <li class="red"><a href=""></a>Home</li>
+                <li><a href=""></a>Packages</li>
+                <li><a href=""></a>Testimonial</li>
+                <li><a href=""></a>Blog</li>
+                <li><a href=""></a>Contact</li>
+            </ul>
+        </nav>
 <!--Banner Section-->
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-title">Explore Your Travel</h3>
+                <p class="banner-pera">Travel is the only thing you buy that makes you richer. Join our tours and enrich your life!Unleash the adventurer in you.</p>
+                <div class="banner-buttons">
+                    <input type="text" name="where to go" id="">
+                    <input type="search" name="" id="">
+                    <input type="search" name="" id="">
+                    <button>Find Now</button>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
 <!--our popular tour section-->
@@ -28,6 +53,56 @@
             </div>
             <div class="popular-img">
                 <img src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+<!--choose destination section-->
+        <section class="destinations">
+            <h3 class="common-title" id="destination-id">Choose Your Destination</h3>
+            <p class="common-pera" id="destination-id">Dive into the vibrant tapestry of [Destination], where history and modernity dance in harmony.<br>Pack your bags and let [Destination] be the canvas for your next extraordinary adventure.</p>
+            <div class="destinations-img">
+                <img src="Images/Rectangle 5.png" alt="">
+                <img src="Images/Rectangle 8.png" alt="">
+            </div>
+            <div class="destinations-img">
+                <img src="Images/Rectangle 6.png" alt="">
+                <img src="Images/Rectangle 7.png" alt="">
+                <img src="Images/Rectangle 9.png" alt="">
+            </div>
+            <div class="destinations-img">
+                <img src="Images/Rectangle 11.png" alt="">
+                <img src="Images/Rectangle 10.png" alt="">
+            </div>
+        </section>
+<!--why choose us section-->
+        <section class="choose-us">
+                <h3 class="common-title" id="destination-id">Why Choose Us</h3>
+                <p class="common-pera" id="destination-id">When you choose us, you're opting for a travel companion dedicated to turning your aspirations into<br> captivating travel stories, one destination at a time.</p>
+                <div class="part1">
+                    <div class="hotel">
+                        <img src="" alt="">
+                        <h4 class=".common-title_24">Handpicked Hotels</h4>
+                        <p class="common-pera">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                    <div class="world">
+                        <img src="" alt="">
+                        <h4 class=".common-title_24">World Class Service</h4>
+                        <p class="common-pera">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                </div>
+                <div class="part2">
+                    <img src="" alt="">
+                    <h4 class=".common-title_24">Best Price Guarantee</h4>
+                    <p class="common-pera">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+        </section>
+<!--Newsletter section-->
+        <section class="newsletter">
+            <div class="letter-section">
+                <h4 class="common-title_24">Newsletter section</h4>
+                <p class="common-pera">Get your daily dose of travel news & tips.<br> Sign up today!</p>
+            </div>
+            <div class="image-section">
+                <img src="Images/Rectangle 8 (1).png" alt="">
             </div>
         </section>
     </main>
