bonus part added

--- a/index.html
+++ b/index.html
@@ -589,6 +589,22 @@
                     <p class="common-pera">Compare prices before booking: Check multiple booking sites and the hotel's own website to find the best initial rate.</p>
                 </div>
         </section>
+<!--Bonus section-->
+<section class="lost" >
+  <div class="simple">
+      <h1 class="common-title" style="width: 448px;margin-bottom:5px;">A Simple Perfect Place To Get Lost</h1>
+      <p class="common-pera" style="width: 532px;">We redefine travel by offering not just destinations, but immersive journeys filled with cultural richness and authentic encounters.</p>
+      <ul>
+        <li>Choose a partner committed to sustainability and responsible travel, ensuring your adventures leave a positive impact on both you and the world.</li>
+        <li>When you choose us, you're opting for a travel companion dedicated to turning your aspirations into captivating travel stories, one destination at a time.</li>
+      </ul>
+      <button>See More</button>
+  </div>
+  <div class="simple-img">
+      <h4>Watch Our Mountain in<br> Bangladesh</h4>
+      <img src="Images/Group 40089.png" alt="">
+      </div>
+</section>
 <!--Newsletter section-->
         <section class="newsletter">
             <div class="letter-section">
